# TSF-SS25-TimeGPT

./: .gitignore  Exam.SoSe2025.ipynb  README.md  pyproject.toml
raw_data/: car_parts_dataset_without_missing_values.tsf  wti_oil_dataset.csv
skripts/etl/: australian_electricity_etl.ipynb  egg_sales_etl.ipynb  saugeenday_etl.ipynb  wti_oil_etl.ipynb
skripts/forecasting/: australian_electricity_model.ipynb  eggs_model.ipynb  models.py  saugeenday_model.ipynb  util.py  window.py  wti_oil_model.ipynb
transformed_data/: cleaned_egg_sales.csv  cleaned_saugeenday.csv  wti_oil.csv
