[project]
name = "tsf-ss25-timegpt"
version = "0.1.0"
description = "Group for TimeGPT"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "numpy (>=1.26,<2.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "statsforecast (>=2.0.1,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "pmdarima (>=2.0.4,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "prophet (>=1.1.7,<2.0.0)",
    "timesfm (>=1.2.9,<2.0.0)",
    "nixtla (>=0.6.6,<0.7.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

